<resources>
    <string name="app_name">Community Application</string>

    <string name="confirm">확인</string>

    <string name="login_detail_title">Login</string>
    <string name="login_detail_email">email address</string>
    <string name="login_detail_email_error">올바른 이메일을 입력해주세요.</string>
    <string name="login_detail_password">password</string>
    <string name="login_detail_password_error">비밀번호를 입력해주세요.</string>
    <string name="login_detail_registration">가입하기</string>

    <string name="registration_title">Registration</string>
    <string name="registration_nickname">nickname</string>
    <string name="registration_nickname_error">닉네임을 입력해주세요.</string>
    <string name="registration_email">email address</string>
    <string name="registration_email_error">올바른 이메일을 입력해주세요.</string>
    <string name="registration_password">password</string>
    <string name="registration_password_error">비밀번호를 입력해주세요.</string>
    <string name="registration_password_confirm">password confirm</string>
    <string name="registration_password_confirm_error">비밀번호가 일치하지 않습니다.</string>

    <string name="registration_confirm_title">Registration Confirm</string>
    <string name="registration_confirm_description">작성해주신 이메일로\n6자리 인증코드를 전송했습니다.\n이메일을 확인해주세요.</string>
    <string name="registration_confirm_email">email</string>
    <string name="registration_confirm_verification_code">verification code</string>
    <string name="registration_confirm_verification_code_error">올바르지 않은 인증코드입니다.</string>

    <string name="community_error">게시판을 일시적으로\n불러올 수 없습니다.</string>

    <string name="post_error">게시글을 일시적으로\n불러올 수 없습니다.</string>

    <string name="post_write_title">게시글</string>
    <string name="post_write_nickname_hint">닉네임</string>
    <string name="post_write_password_hint">비밀번호</string>
    <string name="post_write_title_hint">제목을 입력해주세요.</string>
    <string name="post_write_content_hint">내용을 입력해주세요.</string>

    <string name="post_detail_more_title">게시글 관리</string>
    <string name="post_detail_comment_nickname_hint">닉네임</string>
    <string name="post_detail_comment_password_hint">비밀번호</string>
    <string name="post_detail_comment_write">작성</string>

    <string name="comment_nickname_hint">닉네임</string>
    <string name="comment_password_hint">비밀번호</string>
    <string name="comment_content_hint">댓글을 입력해주세요.</string>
    <string name="comment_delete_text">삭제</string>
    <string name="comment_edit_text">수정</string>
</resources>
