<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_m"
            android:background="@drawable/bg_comment_create"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/nickname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_xs"
                android:layout_marginTop="@dimen/spacing_xs"
                android:background="@color/transparent"
                android:hint="@string/post_detail_comment_nickname_hint"
                android:inputType="text"
                android:maxLines="1"
                android:textAppearance="?attr/typographySubtitle1"
                android:textColor="@color/blue_gray_900"
                app:layout_constraintEnd_toStartOf="@id/divider_nickname"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="ㅇㅇ" />

            <View
                android:id="@+id/divider_nickname"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:background="@color/blue_gray_100"
                app:layout_constraintBottom_toBottomOf="@id/nickname"
                app:layout_constraintEnd_toStartOf="@id/password"
                app:layout_constraintStart_toEndOf="@id/nickname"
                app:layout_constraintTop_toTopOf="@id/nickname" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_xs"
                android:background="@color/transparent"
                android:hint="@string/post_detail_comment_password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textAppearance="?attr/typographySubtitle1"
                android:textColor="@color/blue_gray_900"
                app:layout_constraintBottom_toBottomOf="@id/divider_nickname"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/divider_nickname"
                app:layout_constraintTop_toTopOf="@id/divider_nickname"
                tools:text="1234" />

            <View
                android:id="@+id/divider_password"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/spacing_xs"
                android:background="@color/blue_gray_100"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nickname" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_xs"
                android:layout_marginVertical="@dimen/spacing_xs"
                android:background="@color/transparent"
                android:gravity="start|top"
                android:hint="@string/comment_content_hint"
                android:inputType="textMultiLine"
                android:textAppearance="?attr/typographySubtitle1"
                android:textColor="@color/blue_gray_900"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider_password"
                app:layout_constraintVertical_bias="0.2"
                tools:text="이쯤되면 QA팀이 태만한건가 아니면 개발자들이 ㅈㄴ 무능한건가 모르겠다.." />

            <androidx.cardview.widget.CardView
                android:id="@+id/container_write"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_xs"
                app:cardBackgroundColor="@color/blue_50"
                app:cardCornerRadius="@dimen/radius_small"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_write"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/spacing_m"
                    android:layout_marginVertical="@dimen/spacing_xxs"
                    android:text="@string/post_detail_comment_write"
                    android:textAppearance="?attr/typographySubtitle2" />
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
