<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <merge
        tools:layout_height="wrap_content"
        tools:layout_width="match_parent"
        tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintBottom_toTopOf="@id/container_control"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_s"
                android:layout_marginTop="@dimen/spacing_s"
                android:background="@color/transparent"
                android:gravity="start|top"
                android:hint="@string/comment_content_hint"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:textAppearance="?attr/typographyBody2"
                android:textColor="@color/blue_gray_900"
                app:layout_constraintBottom_toTopOf="@id/nickname"
                app:layout_constraintEnd_toStartOf="@id/arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="이쯤되면 QA팀이 태만한건가 아니면 개발자들이 ㅈㄴ 무능한건가 모르겠다.." />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/nickname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_m"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="@dimen/spacing_s"
                android:ellipsize="end"
                android:maxLines="2"
                android:textAppearance="?attr/typographyBody2"
                android:textColor="@color/blue_gray_900"
                android:textSize="10sp"
                app:layout_constraintBottom_toTopOf="@id/divider_comment"
                app:layout_constraintEnd_toStartOf="@id/arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/content"
                tools:text="작성자 : 김두한" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/arrow"
                android:layout_width="@dimen/size_icon"
                android:layout_height="@dimen/size_icon"
                android:layout_margin="@dimen/spacing_xs"
                android:src="@drawable/ic_arrow_down"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/gray_400" />

            <View
                android:id="@+id/divider_comment"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginHorizontal="@dimen/spacing_xxs"
                android:background="@color/blue_gray_100"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nickname" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_control"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_comment">

            <androidx.cardview.widget.CardView
                android:id="@+id/container_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_s"
                android:layout_marginEnd="@dimen/spacing_xs"
                app:cardBackgroundColor="@color/blue_gray_50"
                app:cardCornerRadius="@dimen/radius_small"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/spacing_xs"
                    android:layout_marginVertical="@dimen/spacing_xxs"
                    android:text="@string/comment_delete_text"
                    android:textAppearance="?attr/typographySubtitle2" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/container_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_xs"
                app:cardBackgroundColor="@color/blue_gray_50"
                app:cardCornerRadius="@dimen/radius_small"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="@id/container_confirm"
                app:layout_constraintEnd_toStartOf="@id/container_confirm"
                app:layout_constraintTop_toTopOf="@id/container_confirm">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/spacing_xs"
                    android:layout_marginVertical="@dimen/spacing_xxs"
                    android:text="@string/comment_edit_text"
                    android:textAppearance="?attr/typographySubtitle2" />
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_xs"
                android:background="@color/transparent"
                android:hint="@string/comment_password_hint"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textAppearance="?attr/typographySubtitle1"
                android:textColor="@color/blue_gray_900"
                app:layout_constraintBottom_toBottomOf="@id/container_cancel"
                app:layout_constraintEnd_toStartOf="@id/container_cancel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/container_cancel"
                tools:text="1234" />

            <View
                android:id="@+id/divider_control"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginHorizontal="@dimen/spacing_xxs"
                android:layout_marginTop="@dimen/spacing_s"
                android:background="@color/blue_gray_100"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/container_confirm" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </merge>
</layout>
